tests/NormalTests/paczka1/small_fuzzy/39779834.err
Error in line 1: oqCM A278 94,0
Error in line 5: JvShB8yoM4u A278 35,1
